--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to GitHub Pages
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
   push:
-    branches:
-      - master  # or 'main' if that's your default branch
+    branches: ["master"]  # or "main" if that's your default branch
   workflow_dispatch:
 
 permissions:
